--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "main": "index.js",
   "repository": "git@github.com:myownradio/webrtc-experiment.git",
   "author": "Roman Lakhtadyr <roman.lakhtadyr@gmail.com>",
+  "homepage": "https://myownradio.github.io/webrtc-na-kolenke",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.3",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "rimraf": "^3.0.2"
   },
   "scripts": {
-    "start": "concurrently -n w: npm:dev:*",
-    "dev:web": "parcel serve ./src/index.html"
+    "start": "parcel serve ./src/index.html",
+    "prebuild": "npx rimraf dist",
+    "build": "parcel build ./src/index.html",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "reconnecting-websocket": "^4.4.0",
