--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "homepage": "https://myownradio.github.io/webrtc-na-kolenke",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/uniqid": "^4.1.3",
     "concurrently": "^5.2.0",
     "gh-pages": "^2.2.0",
     "nodemon": "^2.0.3",
     "parcel-bundler": "^1.12.4",
-    "rimraf": "^3.0.2"
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "parcel serve ./src/index.html",
@@ -21,7 +27,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "reconnecting-websocket": "^4.4.0",
+    "rxjs": "^6.5.5",
+    "uniqid": "^5.2.0",
     "ws": "^7.2.5"
   }
 }
